--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ ul, ol {
 }
 .section-title span {
 	font-size: 14px;
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -142,7 +142,7 @@ ul, ol {
 	bottom: -5px;
 	width: 100%;
 	height: 2px;
-	background: #631616;
+	background: #e6c98c;
 	content: "";
 }
 /* Preloder */
@@ -301,7 +301,7 @@ ul, ol {
 	display: none;
 }
 .top-nav .tn-left li i {
-	color: #631616;
+	color: #e6c98c;
 	margin-right: 4px;
 }
 .top-nav .tn-right {
@@ -323,7 +323,7 @@ ul, ol {
 	font-size: 13px;
 	font-weight: 700;
 	padding: 16px 28px 15px;
-	background: #631616;
+	background: #e6c98c;
 	color: #ffffff;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -383,7 +383,7 @@ ul, ol {
 	transition: all 0.3s;
 }
 .top-nav .tn-right .language-option .flag-dropdown ul li a:hover {
-	color: #631616;
+	color: #e6c98c;
 }
 .menu-item {
 	position: relative;
@@ -436,7 +436,7 @@ ul, ol {
 	top: 52px;
 	width: 100%;
 	height: 2px;
-	background: #631616;
+	background: #e6c98c;
 	content: "";
 	opacity: 0;
 	-webkit-transition: all 0.3s;
@@ -473,7 +473,7 @@ ul, ol {
 	transition: all 0.3s;
 }
 .menu-item .nav-menu .mainmenu li .dropdown li a:hover {
-	color: #631616;
+	color: #e6c98c;
 }
 .menu-item .nav-menu .mainmenu li .dropdown li a:after {
 	display: none;
@@ -553,7 +553,7 @@ ul, ol {
 	padding-left: 20px;
 }
 .booking-form form .check-date i {
-	color: #631616;
+	color: #e6c98c;
 	position: absolute;
 	right: 18px;
 	bottom: 17px;
@@ -578,8 +578,8 @@ ul, ol {
 	float: none;
 }
 .booking-form form .select-option .nice-select:after {
-	border-bottom: 2px solid #631616;
-	border-right: 2px solid #631616;
+	border-bottom: 2px solid #e6c98c;
+	border-right: 2px solid #e6c98c;
 	height: 10px;
 	margin-top: 0;
 	right: 20px;
@@ -600,9 +600,9 @@ ul, ol {
 	display: block;
 	font-size: 14px;
 	text-transform: uppercase;
-	border: 1px solid #631616;
+	border: 1px solid #e6c98c;
 	border-radius: 2px;
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 500;
 	background: transparent;
 	width: 100%;
@@ -688,7 +688,7 @@ ul, ol {
 	transition: all 0.3s;
 }
 .service-item:hover {
-	background: #631616;
+	background: #e6c98c;
 }
 .service-item:hover i {
 	color: #ffffff;
@@ -701,7 +701,7 @@ ul, ol {
 }
 .service-item i {
 	display: inline-block;
-	color: #631616;
+	color: #e6c98c;
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
@@ -756,7 +756,7 @@ ul, ol {
 	margin-bottom: 15px;
 }
 .hp-room-items .hp-room-item .hr-text h2 {
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 700;
 	margin-bottom: 50px;
 	-webkit-transition: all 0.2s;
@@ -898,15 +898,15 @@ ul, ol {
 	margin-right: 7px;
 }
 .footer-section .footer-text .ft-about .fa-social a:hover {
-	background: #631616;
-	border-color: #631616;
+	background: #e6c98c;
+	border-color: #e6c98c;
 }
 .footer-section .footer-text .ft-contact {
 	margin-bottom: 30px;
 }
 .footer-section .footer-text .ft-contact h6 {
 	font-size: 14px;
-	color: #9e3333;
+	color: #e6c98c;
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 3px;
@@ -921,7 +921,7 @@ ul, ol {
 }
 .footer-section .footer-text .ft-newslatter h6 {
 	font-size: 14px;
-	color: #9e3333;
+	color: #e6c98c;
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 3px;
@@ -950,7 +950,7 @@ ul, ol {
 	right: 0;
 	top: 0;
 	font-size: 16px;
-	background: #9e3333;
+	background: #e6c98c;
 	color: #ffffff;
 	padding: 0 16px;
 	height: 50px;
@@ -1049,7 +1049,7 @@ ul, ol {
 	line-height: 42px;
 }
 .about-page-text .ap-services li i {
-	color: #631616;
+	color: #e6c98c;
 	margin-right: 5px;
 }
 .about-page-services .ap-service-item {
@@ -1178,7 +1178,7 @@ ul, ol {
 	margin-bottom: 17px;
 }
 .room-item .ri-text h3 {
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 700;
 	margin-bottom: 14px;
 }
@@ -1209,7 +1209,7 @@ ul, ol {
 .room-pagination a {
 	font-size: 16px;
 	color: #707079;
-	border: 1px solid #9e3333;
+	border: 1px solid #e6c98c;
 	border-radius: 2px;
 	padding: 7px 13px 5px;
 	margin-right: 7px;
@@ -1222,7 +1222,7 @@ ul, ol {
 	margin-right: 0;
 }
 .room-pagination a:hover {
-	background: #631616;
+	background: #e6c98c;
 	color: #ffffff;
 }
 /*-----------------------
@@ -1265,11 +1265,11 @@ ul, ol {
 	font-size: 13px;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #631616;
+	background: #e6c98c;
 	padding: 14px 28px 13px;
 }
 .room-details-item .rd-text h2 {
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 700;
 	margin-bottom: 25px;
 }
@@ -1335,7 +1335,7 @@ ul, ol {
 }
 .rd-reviews .review-item .ri-text span {
 	font-size: 12px;
-	color: #631616;
+	color: #e6c98c;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 }
@@ -1432,7 +1432,7 @@ ul, ol {
 	text-transform: uppercase;
 	color: #ffffff;
 	letter-spacing: 2px;
-	background: #631616;
+	background: #e6c98c;
 	border: none;
 	padding: 14px 34px 13px;
 	display: inline-block;
@@ -1466,7 +1466,7 @@ ul, ol {
 	padding-left: 20px;
 }
 .room-booking form .check-date i {
-	color: #631616;
+	color: #e6c98c;
 	position: absolute;
 	right: 18px;
 	bottom: 17px;
@@ -1491,8 +1491,8 @@ ul, ol {
 	float: none;
 }
 .room-booking form .select-option .nice-select:after {
-	border-bottom: 2px solid #631616;
-	border-right: 2px solid #631616;
+	border-bottom: 2px solid #e6c98c;
+	border-right: 2px solid #e6c98c;
 	height: 10px;
 	margin-top: 0;
 	right: 20px;
@@ -1513,9 +1513,9 @@ ul, ol {
 	display: block;
 	font-size: 14px;
 	text-transform: uppercase;
-	border: 1px solid #631616;
+	border: 1px solid #e6c98c;
 	border-radius: 2px;
-	color: #631616;
+	color: #e6c98c;
 	font-weight: 500;
 	background: transparent;
 	width: 100%;
@@ -1553,7 +1553,7 @@ ul, ol {
 	font-size: 12px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	background: #631616;
+	background: #e6c98c;
 	padding: 3px 10px;
 	border-radius: 2px;
 }
@@ -1595,7 +1595,7 @@ ul, ol {
 .bd-hero-text span {
 	font-size: 12px;
 	color: #ffffff;
-	background: #631616;
+	background: #e6c98c;
 	font-weight: 500;
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -1613,7 +1613,7 @@ ul, ol {
 .bd-hero-text ul li {
 	list-style: none;
 	font-size: 14px;
-	color: #631616;
+	color: #e6c98c;
 	margin-right: 35px;
 	display: inline-block;
 }
@@ -1694,7 +1694,7 @@ ul, ol {
 }
 .blog-details-text .tag-share .tags a:hover {
 	color: #ffffff;
-	background: #631616;
+	background: #e6c98c;
 }
 .blog-details-text .tag-share .social-share {
 	float: right;
@@ -1763,7 +1763,7 @@ ul, ol {
 }
 .blog-details-text .comment-option .single-comment-item .sc-text span {
 	font-size: 12px;
-	color: #631616;
+	color: #e6c98c;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
@@ -1793,9 +1793,9 @@ ul, ol {
 	margin-right: 10px;
 }
 .blog-details-text .comment-option .single-comment-item .sc-text a:hover {
-	background: #631616;
+	background: #e6c98c;
 	color: #ffffff;
-	border-color: #631616;
+	border-color: #e6c98c;
 }
 .blog-details-text .leave-comment h4 {
 	color: #19191a;
@@ -1815,7 +1815,7 @@ ul, ol {
 	transition: all 0.3s;
 }
 .blog-details-text .leave-comment .comment-form input:focus {
-	border-color: #631616;
+	border-color: #e6c98c;
 }
 .blog-details-text .leave-comment .comment-form textarea {
 	width: 100%;
@@ -1833,7 +1833,7 @@ ul, ol {
 	padding-top: 12px;
 }
 .blog-details-text .leave-comment .comment-form textarea:focus {
-	border-color: #631616;
+	border-color: #e6c98c;
 }
 .blog-details-text .leave-comment .comment-form button {
 	font-size: 13px;
@@ -1841,7 +1841,7 @@ ul, ol {
 	text-transform: uppercase;
 	color: #ffffff;
 	letter-spacing: 2px;
-	background: #631616;
+	background: #e6c98c;
 	border: none;
 	padding: 14px 42px 13px;
 	display: inline-block;
@@ -1943,7 +1943,7 @@ ul, ol {
 	text-transform: uppercase;
 	color: #ffffff;
 	letter-spacing: 2px;
-	background: #631616;
+	background: #e6c98c;
 	border: none;
 	padding: 14px 34px 13px;
 	display: inline-block;
@@ -2124,14 +2124,14 @@ ul, ol {
 		transition: all 0.3s;
 	}
 	.offcanvas-menu-wrapper .header-configure-area .language-option .flag-dropdown ul li a:hover {
-		color: #631616;
+		color: #e6c98c;
 	}
 	.offcanvas-menu-wrapper .header-configure-area .bk-btn {
 		display: inline-block;
 		font-size: 13px;
 		font-weight: 700;
 		padding: 16px 28px 15px;
-		background: #631616;
+		background: #e6c98c;
 		color: #ffffff;
 		text-transform: uppercase;
 		letter-spacing: 2px;
@@ -2172,7 +2172,7 @@ ul, ol {
 	.offcanvas-menu-wrapper .slicknav_menu .slicknav_nav ul li a:hover {
 		border-radius: 0;
 		background: transparent;
-		color: #631616;
+		color: #e6c98c;
 	}
 	.offcanvas-menu-wrapper .slicknav_menu .slicknav_nav .slicknav_row a {
 		border-bottom: 0;
@@ -2188,10 +2188,10 @@ ul, ol {
 		transition: all 0.3s;
 	}
 	.offcanvas-menu-wrapper .slicknav_menu .slicknav_nav .slicknav_row:hover a {
-		color: #631616;
+		color: #e6c98c;
 	}
 	.offcanvas-menu-wrapper .slicknav_menu .slicknav_nav .slicknav_row:hover span {
-		color: #631616;
+		color: #e6c98c;
 	}
 	.offcanvas-menu-wrapper .top-social {
 		display: inline-block;
@@ -2215,7 +2215,7 @@ ul, ol {
 		line-height: 28px;
 	}
 	.offcanvas-menu-wrapper .top-widget li i {
-		color: #631616;
+		color: #e6c98c;
 		margin-right: 4px;
 	}
 	.offcanvas-menu-wrapper.show-offcanvas-menu-wrapper {
@@ -2347,12 +2347,12 @@ ul, ol {
 /* Mislenious */
 
 .book:hover {
-	background-color: #631616;
+	background-color: #e6c98c;
 	color: white;
 	transition: 0.3s;
 }
 .heda {
-	color: #9e3333;
+	color: #e6c98c;
 }
 
 .decepticon {
@@ -2366,14 +2366,14 @@ ul, ol {
   color: black;
 }
 .forg:hover {
-	color: #9e3333;
+	color: #e6c98c;
 }
 .rook {
   padding: 15px 28px;          /* Resize the button */
   font-size: 16px;
-  background-color: #9e3333;   /* Base color */
+  background-color: #e6c98c;   /* Base color */
   color: white;
-  border: 10px solid solid #631616;
+  border: 10px solid solid #e6c98c;
   border-radius: 4rem;
   cursor: pointer;
   transition: background-color 0.3s ease; /* Smooth transition */
@@ -2382,8 +2382,8 @@ ul, ol {
 
 .rook:hover {
   background-color: #ffffff;   /* Color on hover */
-  color: #631616;
-  border: 0.5px solid #631616;
+  color: #e6c98c;
+  border: 0.5px solid #e6c98c;
   border-radius: 4rem;
 }
 
@@ -2391,7 +2391,7 @@ ul, ol {
     display: inline-block;
     padding: 8px 16px;
     cursor: pointer;
-    background-color: #631616;
+    background-color: #e6c98c;
     color: #fff;
     border-radius: 4px;
     font-weight: bold;
@@ -2404,7 +2404,7 @@ ul, ol {
 
 .hook:hover {
 	background-color: white;
-	color: #631616;
+	color: #e6c98c;
 	transition: 0.3s;
 }
 
@@ -2412,11 +2412,11 @@ ul, ol {
 	display: block;
 	font-size: 14px;
 	text-transform: capitalize;
-	border: 1px solid #631616;
+	border: 1px solid #e6c98c;
 	border-radius: 6rem;
 	color: white;
 	font-weight: 500;
-	background: #631616;
+	background: #e6c98c;
 	width: 11rem;
 	height: 46px;
 	margin-top: 30px;
